src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Current_QC_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current QC Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Describe what this account is used for or what the person&apos;s function is.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Approver__c</fullName>
        <label>Next Approver</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>QC_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QC Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SurveyMonkey__Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SurveyMonkey__SM_Permission_Type__c</fullName>
        <description>Survey monkey permission type</description>
        <label>SM Permission Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveyMonkey__Salesforce_Pro_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Pro Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SurveyMonkey__SurveyMonkey_Username__c</fullName>
        <label>SurveyMonkey Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyMonkey__Survey_Monkey_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Monkey Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Is_logged_out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, user has logged and is not available to receive distributions from the Distribution Engine</inlineHelpText>
        <label>Is logged out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Pardot Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Pardot User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Pardot User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveInternalUsers</fullName>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Internal Users</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ActivePartners</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Partners</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ActivePartnersManagerExecutive</fullName>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>gold</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>manager,executive</value>
        </filters>
        <label>Active Partners - Manager and Executive</label>
    </listViews>
    <listViews>
        <fullName>Active_Account_Execs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>account executive</value>
        </filters>
        <label>Active Account Execs</label>
    </listViews>
    <listViews>
        <fullName>AllActiveUsers</fullName>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>Description__c</columns>
        <columns>Next_Approver__c</columns>
        <columns>DELEGATED_APPROVER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Users</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>All_Account_Execs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>account executive</value>
        </filters>
        <label>All Account Execs</label>
    </listViews>
    <listViews>
        <fullName>All_Account_Execs_Sales_Assistants</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>account executive,sales assistant</value>
        </filters>
        <label>All Account Execs &amp; Sales Assistants</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Account_Execs</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>account executive</value>
        </filters>
        <label>Inactive Account Execs</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Internal_Users</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Internal Users</label>
    </listViews>
    <listViews>
        <fullName>PartnersNoActivity</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>partner</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Partners - No Activity</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DocuSign Inactive Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>